--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -370,7 +370,7 @@ With our semi-analytic model we describe the impact of varying depth in ground-b
 
 \item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has fewer neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the sample variance of the depth-distribution. We have assumed that the probability for any pointing to be in percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, it does not necessarily hold for a real survey. However, our analysis in App.~\ref{sec:expand_eoftheta} suggests that these effects are not significant for the KV450 survey. In the models, we have also assumed an uncorrelated distribution of the depth-function. As can be seen in Fig \ref{fig:all_xis}, this approximation introduces a small error when compared to the simulations.
 
-\item In our MCMC runs we did not account for degeneracies with other cosmological parameters or observational effects. Especially intrinsic alignments and baryon feedback also modify the correlation functions primarily on small scales, so they are likely to be degenerate with the effect of varying depth \citep{Troxel:2015}. In an MCMC run that includes these nuisance parameters, we suspect that the parameters for intrinsic alignments and baryon feedback change to mitigate this effect, so that the impact on cosmological parameters will be smaller than in our results. Furthermore, possible degeneracies between $S_8$ and other cosmological parameters that we have kept fixed might bias the resulting values. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
+\item In our MCMC runs we did not account for degeneracies with other cosmological parameters or observational effects. Especially intrinsic alignments and baryon feedback also modify the correlation functions primarily on small scales, so they are likely to be degenerate with the effect of varying depth \citep{Troxel:2015}. In an MCMC run that includes these nuisance parameters, we suspect that the parameters for intrinsic alignments and baryon feedback change to mitigate this effect, so that the impact on cosmological parameters will be smaller than in our results. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
 \end{enumerate}
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. In particular this means that a varying depth can not explain the discrepancy between observations of the local Universe and results from analysis of the CMB.
