--- a/cite.bib
+++ b/cite.bib
@@ -301,6 +301,39 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2016}
 }
 
+@article{2017A&A...604A.134D,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2017A&A...604A.134D},
+ archiveprefix = {arXiv},
+ author = {{de Jong}, Jelte T.~A. and {Verdoes Kleijn}, Gijs A. and
+{Erben}, Thomas and {Hildebrandt}, Hendrik and {Kuijken}, Konrad and
+{Sikkema}, Gert and {Brescia}, Massimo and {Bilicki}, Maciej and
+{Napolitano}, Nicola R. and {Amaro}, Valeria and {Begeman}, Kor G. and
+{Boxhoorn}, Danny R. and {Buddelmeijer}, Hugo and {Cavuoti}, Stefano and
+{Getman}, Fedor and {Grado}, Aniello and {Helmich}, Ewout and
+{Huang}, Zhuoyi and {Irisarri}, Nancy and {La Barbera}, Francesco and
+{Longo}, Giuseppe and {McFarland}, John P. and {Nakajima}, Reiko and
+{Paolillo}, Maurizio and {Puddu}, Emanuella and {Radovich}, Mario and
+{Rifatto}, Agatino and {Tortora}, Crescenzo and {Valentijn}, Edwin A. and
+{Vellucci}, Civita and {Vriend}, Willem-Jan and {Amon}, Alexandra and
+{Blake}, Chris and {Choi}, Ami and {Conti}, Ian Fenech and
+{Gwyn}, Stephen D.~J. and {Herbonnet}, Ricardo and
+{Heymans}, Catherine and {Hoekstra}, Henk and {Klaes}, Dominik and
+{Merten}, Julian and {Miller}, Lance and {Schneider}, Peter and
+{Viola}, Massimo},
+ doi = {10.1051/0004-6361/201730747},
+ eid = {A134},
+ eprint = {1703.02991},
+ journal = {\aap},
+ keywords = {surveys, catalogs, techniques: photometric, techniques: image processing, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {Aug},
+ pages = {A134},
+ primaryclass = {astro-ph.GA},
+ title = {{The third data release of the Kilo-Degree Survey and associated data products}},
+ volume = {604},
+ year = {2017}
+}
+
 @article{2017MNRAS.464.1676A,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.464.1676A},
