--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -97,7 +97,7 @@ For current cosmic shear surveys, the estimated systematic error is of comparabl
 
 To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes can not be created by astrophysical phenomena and are thus an excellent test for remaining systematics. The most useful E- and B-mode decomposition for cosmic shear surveys is provided by Complete Orthogonal Sets of E- and B-mode Integrals \citep[COSEBIs,][hereafter S10]{2010A&A...520A.116S}, as it can easily be applied to real data. Note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
 
-One systematic effect is the variation of depth in a survey. While effects like Galactic extinction or dithering strategies do play a role in every survey, this work focuses on the effects caused by varying atmospheric conditions that are found in ground-based surveys. To first order, this variation can be modelled by a piece-wise constant depth function, which varies from pointing to pointing. In this work we assume the specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}, namely an assembly of $1\,\text{deg}^2$ square fields. 
+One systematic effect is the variation of depth in a survey. While effects like Galactic extinction or dithering strategies do play a role in every survey, this work focuses on the effects caused by varying atmospheric conditions that are found in ground-based surveys. To first order, this variation can be modelled by a piece-wise constant depth function, which varies from pointing to pointing. In this work we assume the specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}, namely an assembly of $1\,\text{deg}^2$ square fields. To quantify the depth, we chose the limiting magnitude of the $r$-band, as defined in \citet{2017A&A...604A.134D}, since it serves as the detection band and is thus most important for determining source galaxies.
 
 %The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}).
 %
@@ -223,7 +223,7 @@ The previously derived analytic model describes how varying depth between pointi
 
 Below we derive a more sophisticated model that includes the effects of the LSS. While it is computationally more expensive, it yields accurate results for cosmic shear surveys, which are sensitive to the exact redshift distributions of sources as well as the underlying cosmology.
 
-An inspection of KiDS-data showed that the redshift distribution of sources is highly correlated with the depth in the $r$-band. We thus chose to separate the survey into 10 percentiles, sorted by $r$-band depth, i.e. if a pointing had a shallower depth than 90\% of the other pointings, it would belong to the first percentile, and so on. For each percentile $m$ and each tomographic redshift bin $i$ we can extract a weighted number of galaxies $N^i_m$ and a source redshift distribution $p^i_m(z)$ following the direct spectroscopic calibration method of H18. In Fig.~\ref{fig:nz_of_meanz} the average redshift and weighted number of galaxies are plotted for each percentile of each redshift bin, whereas a selection of source redshift distributions is depicted in Fig.~\ref{fig:nofz_percentiles}. A table of the limiting magnitudes for each percentile can be found in Tab.~\ref{tab:maglim}.
+An inspection of KiDS-data showed that the redshift distribution of sources is highly correlated with the limiting magnitude in the $r$-band. We thus chose to separate the survey into 10 percentiles, sorted by $r$-band depth, i.e. if a pointing had a shallower depth than 90\% of the other pointings, it would belong to the first percentile, and so on. For each percentile $m$ and each tomographic redshift bin $i$ we can extract a weighted number of galaxies $N^i_m$ and a source redshift distribution $p^i_m(z)$ following the direct spectroscopic calibration method of H18. In Fig.~\ref{fig:nz_of_meanz} the average redshift and weighted number of galaxies are plotted for each percentile of each redshift bin, whereas a selection of source redshift distributions is depicted in Fig.~\ref{fig:nofz_percentiles}. A table of the limiting magnitudes for each percentile can be found in Tab.~\ref{tab:maglim}.
 %
 \begin{figure}
 \centering
