--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -53,6 +53,7 @@
           \and Marika Asgari\inst{3}
           \and Catherine Heymans\inst{3,2} 
           \and Benjamin Joachimi\inst{4}
+          \and Konrad Kuijken\inst{5}
           \and Chieh-An Lin\inst{3}
           \and Tilman Tr\"{o}ster\inst{3}
           \and Jan Luca van den Busch\inst{2,1}
@@ -64,6 +65,8 @@ Astronomisches Institut, Ruhr-Universit\"at Bochum, Universit\"atsstr. 150, 4480
 Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK
 \and
 Department of Physics and Astronomy, University College London, Gower Street, London WC1E 6BT, UK
+\and
+Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Netherlands
 % \and
 % Service d'Astrophysique, CEA Saclay, Orme des Merisiers, B\^at 709, 91191 Gif-sur-Yvette, France
 % \and 
