--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -164,7 +164,7 @@ More convenient measures to infer cosmological information from observational da
 \end{equation}
 Here, $\gamma_{\rm{t}}$ and $\gamma_\times$ denote the tangential- and cross-component of the shear for a galaxy pair with respect to their relative orientation \citep[see][]{2002A&A...396....1S}.
 The shear correlation functions are the prime estimators to quantify a cosmic-shear signal, since it is simple to include a weighting of the shear measurements into the correlation functions and, contrary to the power spectrum, one does not have to worry about the shape of the survey footprint or masked regions, or model the noise contribution. 
-For this analysis we will follow the assumption that a deeper pointing shows a stronger shear signal $\gamma^{\rm{obs}}(\b\theta) = W(\b\theta)\gamma(\b\theta)$ as described above. While this is not true for a 3-dimensional lensing matter distribution, it should be a reasonable first approximation for small variations in mean source redshift. Additionally, we assume that a greater depth does not only lead to a stronger average shear, but also to a higher galaxy number density, implying a correlation between those two quantities.
+For this analysis we will follow the assumption that a deeper pointing shows a stronger shear signal $\gamma^{\rm{obs}}(\b\theta) = W(\b\theta)\gamma(\b\theta)$ as described above. In general, this is certainly not true. This assumption implies that a higher redshift just increases the amplitude of the shear signal, but as can clearly be seen by inspecting shear correlation functions of different redshift distributions, the change of the signal is extremely scale-dependent and not just a multiplication with a constant factor. However, it should serve as a reasonable first approximation for small variations in mean source redshift. Additionally, we assume that a greater depth does not only lead to a stronger average shear, but also to a higher galaxy number density, implying a correlation between those two quantities.
 
 Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies\footnote{Instead of using the actual number of galaxies, we take the sum of their lensing weights, following H17. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.} per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via %\citep[see][]{2002A&A...396....1S}
 \begin{align}
@@ -323,7 +323,7 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
   \centering
   \includegraphics[width=0.9\linewidth]{images/xis_all1.pdf}
-  \caption{The ratio of modelled to observed correlation functions for a cross-correlation of all redshift bins. Plotted are the semi-analytic method (blue), the numerical simulations (red) as well as the analytic method (green) with the first and second method of estimating the weight function, as described in the beginning of Sec.~\ref{sec:results}. The dashed part of the red line represents the region in which the limited resulution affects the simulations by more than 10\%. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
+  \caption{The ratio of modelled to observed correlation functions for a cross-correlation of all redshift bins. Plotted are the semi-analytic method (blue), the numerical simulations (red) as well as the analytic method (green) with the first and second method of estimating the weight function, as described in the beginning of Sec.~\ref{sec:results}. The dashed part of the red line represents the region in which the limited resolution affects the simulations by more than 10\%. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
   \label{fig:all_xis}
   \end{figure*}
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
