--- a/cite.bib
+++ b/cite.bib
@@ -1,5 +1,14 @@
 @string{june = {June}}
 
+@article{asgari/etal:2019,
+author={{Asgari} and {Tr{\"o}ster} and {Heymans} and
+  {Hildebrandt} and {van den Busch} and {Wright} and {Choi} and {Erben} and {Joachimi} and
+  {Joudaki} and {Kannawadi} and {Kuijken} and {Lin} and {Schneider} and
+  {Zuntz}},
+  journal = {A\&A submitted},
+  year = {2019}
+}
+
 @article{10.1093/mnras/stx2082,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.472.2126K},
@@ -705,6 +714,25 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2019}
 }
 
+@article{Kumar:2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019EPJC...79..576K},
+ archiveprefix = {arXiv},
+ author = {{Kumar}, Suresh and {Nunes}, Rafael C. and {Yadav}, Santosh Kumar},
+ doi = {10.1140/epjc/s10052-019-7087-7},
+ eid = {576},
+ eprint = {1903.04865},
+ journal = {European Physical Journal C},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+ month = {Jul},
+ number = {7},
+ pages = {576},
+ primaryclass = {astro-ph.CO},
+ title = {{Dark sector interaction: a remedy of the tensions between CMB and LSS data}},
+ volume = {79},
+ year = {2019}
+}
+
 @article{Laureijs:2011,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2011arXiv1110.3193L},
@@ -723,6 +751,23 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  year = {2011}
 }
 
+@article{Mandelbaum:2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2018ARA&A..56..393M},
+ archiveprefix = {arXiv},
+ author = {{Mandelbaum}, Rachel},
+ doi = {10.1146/annurev-astro-081817-051928},
+ eprint = {1710.03235},
+ journal = {\araa},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Sep},
+ pages = {393-433},
+ primaryclass = {astro-ph.CO},
+ title = {{Weak Lensing for Precision Cosmology}},
+ volume = {56},
+ year = {2018}
+}
+
 @article{Troxel:2015,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2015PhR...558....1T},
@@ -738,6 +783,25 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian},
  title = {{The intrinsic alignment of galaxies and its impact on weak gravitational lensing in an era of precision cosmology}},
  volume = {558},
  year = {2015}
+}
+
+@article{Vale:2004,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2004ApJ...613L...1V},
+ archiveprefix = {arXiv},
+ author = {{Vale}, Chris and {Hoekstra}, Henk and {van Waerbeke}, Ludovic and
+{White}, Martin},
+ doi = {10.1086/424873},
+ eprint = {astro-ph/0405268},
+ journal = {\apjl},
+ keywords = {Cosmology: Theory, Cosmology: Gravitational Lensing, Cosmology: Large-Scale Structure of Universe, Astrophysics},
+ month = {Sep},
+ number = {1},
+ pages = {L1-L4},
+ primaryclass = {astro-ph},
+ title = {{Large-Scale Systematic Signals in Weak Lensing Surveys}},
+ volume = {613},
+ year = {2004}
 }
 
 @article{Wright:2018,
