--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -60,7 +60,7 @@
           }
    \institute{Argelander-Institut f\"ur Astronomie, Auf dem H\"ugel 71, 53121 Bonn, Germany 
 \and 
-Astronomisches Institut, Ruhr-Universit\"at Bochum, Universit\"atsstr. 150, 44801 Bochum, Germany 
+The German Centre for Cosmological Lensing, Astronomisches Institut, Ruhr-Universit\"at Bochum, Universit\"atsstr. 150, 44801 Bochum, Germany 
 \and
 Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK
 \and
@@ -93,26 +93,31 @@ Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Neth
 %
 %-------------------------------------------------------------------
 \section{Introduction}
-The discovery of cosmic shear has provided us with a new and powerful cosmological tool to empirically test the standard model of cosmology and to determine its parameters. Contrary to the analysis of the cosmic microwave background \citep[CMB, e.g.~by][]{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the low-redshift large-scale Structure and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are particularly sensitive to the parameter $S_8=\sigma_8 (\Omega_{\rm m}/0.3)^\alpha$, where $\sigma_8$ characterizes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density parameter. The parameter $\alpha\approx 0.5$ depends on the exact survey properties; in this paper we will fix it to be $\alpha = 0.5$.
+The discovery of cosmic shear has provided us with a new and powerful cosmological tool to empirically test the standard model of cosmology and to determine its parameters. Contrary to the analysis of the cosmic microwave background \citep[CMB, e.g.~by][]{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the low-redshift large-scale structure and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are particularly sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ characterizes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density parameter. Constraints on $S_8$ from the three current major cosmic shear results are all consistent with the CMB analysis by \citet{2018arXiv180706209P}. It is interesting to note, however, that they all favour values that are slightly lower than the Planck constraints of $S_8 = 0.830 \pm 0.013$. \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and \citet{2018PhRvD..98d3528T} constrain $S_8=0.782\pm 0.027$ using the Dark Energy Survey (DES).  Combined analyses of DES and KiDS data \citep{Joudaki:2019, asgari/etal:2019} results in a $\sim 3 \sigma S_8$ tension with the CMB value. If this tension is not the manifestation of an unaccounted systematic effect, in either the cosmic shear surveys \citep{Mandelbaum:2019} or the Planck mission \citep{2016ApJ...818..132A}, it certainly merits attention. It could be interpreted as a sign of new physics with examples like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P} and coupling within the dark sector \citep{Kumar:2019}.  It could also, however, be a simple statistical coincidence.
+
+
+
 It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis by \citet{2018arXiv180706209P}. While their analysis determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Reweighting the obtained redshifts of data from DES and combining this with KiDS data \citep[][Asgari et al.~in prep.]{Joudaki:2019}, yields even higher tension with the value determined for $S_8$ by the Planck Collaboration. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2019arXiv190103686S,2019arXiv190911006T}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
-For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}.
+For current cosmic shear surveys, the estimated systematic error is becoming comparable in size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}.
 
 To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes cannot be created by astrophysical phenomena and are thus an excellent test for remaining systematics. The most useful E- and B-mode decomposition for cosmic shear surveys is provided by Complete Orthogonal Sets of E- and B-mode Integrals \citep[COSEBIs,][hereafter S10]{2010A&A...520A.116S}, as it can easily be applied to real data. Note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
 
-One systematic effect is the variation of depth in a survey. While effects like Galactic extinction or dithering strategies do play a role in every survey, this work focuses on the effects caused by varying atmospheric conditions that are found in ground-based surveys. To first order, this variation can be modelled by a piece-wise constant depth function, which varies from pointing to pointing. In this work we assume the specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}, namely an assembly of $1\,\text{deg}^2$ square fields. To quantify the depth, we chose the limiting magnitude of the $r$-band, as defined in \citet{2017A&A...604A.134D}, since it serves as the detection band and is thus most important for determining source galaxies.
+In this paper we focus on systematic effects induced by variation in survey depth that is so far unaccounted for in cosmic shear analyses \citep{Vale:2004}.   For a fixed exposure time survey, varying atmospheric conditions, dithering strategies and galactic extinction all contribute to an inhomogeneous limiting magnitude as a function of sky position.   In order to assess the impact of variable depth for current and future surveys we build an analytical model for the effect based on the survey specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}.  To first order, the depth variation in KiDS can be modelled by a piece-wise constant depth function, which varies between each $1\,\text{deg}^2$ square pointing.   KiDS object detection is defined in the $r-band$ as these images were chosen to be significantly deeper in comparison to the other optical and near-infra red filters.   We therefore quantify survey depth with the limiting $r$-band magnitude, as defined in \citet{2017A&A...604A.134D}.  We defer the study of multi-band variable depth and its impact on photometric redshift accuracy for future work.
 
 %The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}).
 %
 
-In Sect. \ref{sec:analytic_models} we will introduce two simple toy models to understand this effect and analyze the impact on the cosmic shear power spectrum. In Sect. \ref{sec:xipm_semianalytic} we will estimate the effect on the shear correlation functions $\xi_\pm$ using a semi-analytic model. We will present our results in Sect. \ref{sec:results}. In Sect. \ref{sec:discussion} we will discuss our results and comment on the impact of our used simplifications. App.~A is reserved for detailed calculations that cannot be done in the main paper, in App.~B we introduce way to apply our model to a given survey footprint. App.~C is reserved for figures and tables that cannot be displayed in the main body. We will assume the standard weak gravitational lensing formalism, a summary of which can be found in \citet{2001PhR...340..291B}.
+In Sect. \ref{sec:analytic_models} we will introduce two simple toy models to understand this effect and analyze the impact on the cosmic shear power spectrum. In Sect. \ref{sec:xipm_semianalytic} we will estimate the effect on the shear correlation functions $\xi_\pm$ using a semi-analytic model. We will present our results in Sect. \ref{sec:results}. In Sect. \ref{sec:discussion} we will discuss our results and comment on the impact of our used simplifications. In the appendices we present the full derivation of our model for finite field surveys.
+%App.~A is reserved for detailed calculations that cannot be done in the main paper, in App.~B we introduce way to apply our model to a given survey footprint. App.~C is reserved for figures and tables that cannot be displayed in the main body. 
+We will assume the standard weak gravitational lensing formalism, a summary of which can be found in \citet{2001PhR...340..291B}.
 
 %-------------------------------------------------------------------
 \section{Simple, analytic toy models}
 \label{sec:analytic_models}
-For our first analysis we assume that all the matter between sources and observer is concentrated in a single lens plane of distance $D_{\rm d}$ from the observer. If we now distribute sources at varying distances $D_{\rm s}$, two effects become apparent: Firstly, the lensing efficiency $D_{\rm{ds}}/D_{\rm s}$ varies, where $D_{\rm{ds}}$ is the distance between the lens plane and the respective source. Secondly, and more importantly, for a more distant source \emph{more} matter is concentrated between the source and the observer, leading to a stronger shear signal.
+For our first analysis we assume that all the matter between the sources and observer is concentrated in a single lens plane of distance $D_{\rm d}$ from the observer. If we now distribute sources at varying distances $D_{\rm s}$, two effects become apparent: Firstly, the lensing efficiency $D_{\rm{ds}}/D_{\rm s}$ varies, where $D_{\rm{ds}}$ is the distance between the lens plane and the respective source. Secondly, and more importantly, for a more distant source \emph{more} matter is concentrated between the source and the observer, leading to a stronger shear signal.
 
-Assuming that the depth, and thus the source redshift population, only varies between pointings of the camera, an observer will measure a shear signal that is modified by a step-like depth-function, $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$, where $W$ is proportional to the mean of the lensing efficiency $\Dds/\Ds$ of one pointing and $\gamma$ denotes the shear that this pointing would read if it were of the average depth.
+Assuming that the depth, and thus the source redshift population, only varies between pointings of the camera, an observer will measure a shear signal that is modified by a step-like depth-function, $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$, where $W$ is proportional to the mean of the lensing efficiency $\Dds/\Ds$ of one pointing and $\gamma$ denotes the shear that this pointing would experience if it were of the average depth.
 We can parametrize $W$ as $W(\bm{\theta}) = 1+w(\bm{\theta})$. This implies that $\langle w(\bm{\theta})\rangle=0$ holds, where $\langle \cdot\rangle$ denotes the average over all pointings.
 \subsection{Modelling the power spectrum}
 \label{sec:modelling_power_spectrum}
@@ -403,7 +408,6 @@ on behalf of the KiDS consortium.
 \\
 This research has made use of NASA's Astrophysics Data System and adstex (\url{https://github.com/yymao/adstex}).
 \end{acknowledgements}
-
 
 \bibliographystyle{aa}
 \bibliography{cite}
