--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -169,9 +169,9 @@ More convenient measures to infer cosmological information from observational da
 \end{equation}
 Here, $\gamma_{\rm{t}}$ and $\gamma_\times$ denote the tangential- and cross-component of the shear for a galaxy pair with respect to their relative orientation \citep[see][]{2002A&A...396....1S}.
 The shear correlation functions are the prime estimators to quantify a cosmic-shear signal, since it is simple to include a weighting of the shear measurements into the correlation functions and, contrary to the power spectrum, one does not have to worry about the shape of the survey footprint or masked regions, or model the noise contribution. 
-For this analysis we will follow the assumption that a deeper pointing shows a stronger shear signal $\gamma^{\rm{obs}}(\b\theta) = W(\b\theta)\gamma(\b\theta)$ as described above. In general, this is certainly not true. This assumption implies that a higher redshift just increases the amplitude of the shear signal, but as can clearly be seen by inspecting shear correlation functions of different redshift distributions, the change of the signal is extremely scale-dependent and not just a multiplication with a constant factor. However, it should serve as a reasonable first approximation for small variations in mean source redshift. Additionally, we assume that a greater depth does not only lead to a stronger average shear, but also to a higher galaxy number density, implying a correlation between those two quantities.
+For this analysis we will follow the assumption that a deeper pointing shows a stronger shear signal $\gamma^{\rm{obs}}(\b\theta) = W(\b\theta)\gamma(\b\theta)$ as described above. This assumption implies that a higher redshift just increases the amplitude of the shear signal, but as can clearly be seen by inspecting shear correlation functions of different redshift distributions, the change of the signal is extremely scale-dependent and not just a multiplication with a constant factor. In other words, not just the average shear changes as a function of redshift, but also its entire two-point statistics. However, this should serve as a reasonable first approximation for small variations in mean source redshift. Additionally, we assume that a greater depth does not only lead to a stronger average shear, but also to a higher galaxy number density, implying a correlation between those two quantities.
 
-Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies\footnote{Instead of using the actual number of galaxies, we take the sum of their lensing weights, following H17. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.} per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via %\citep[see][]{2002A&A...396....1S}
+Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies\footnote{Instead of using the actual number of galaxies, we take the effective number density times respective area, as defined in \citet{Kuijken:2015}. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.} per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via %\citep[see][]{2002A&A...396....1S}
 \begin{align}
 \xi^{ij,\text{obs}}_\pm(\theta) = & \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_{\rm t}(\bth)\gamma^{j,\rm{obs}}_{\rm t}(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \\
  & \pm \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_\times(\bth)\gamma^{j,\rm{obs}}_\times(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \nonumber\\
@@ -196,7 +196,7 @@ To compute the modified shear correlation functions, we parametrize the number d
 + \la n^jw^iw^j\ra \nonumber\\
 & \qquad\quad\left.+ \la n^in^jw^iw^j\ra  \right] \, .
  \end{align}
-Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It is not inherently obvious that this is a valid assumption. However, after performing calculations with and without higher-order correlations, the largest relative difference between the outcomes of both equations was less then $5\times 10^{-4}$.} and performing the same calculation for the denominator of Eq.\,\eqref{eq:xipmblub1}, we get
+Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It is not inherently obvious that this is a valid assumption. However, after performing calculations with and without the inclusion of higher-order correlations, the largest relative difference between the outcomes of both equations was less than $5\times 10^{-4}$.} and performing the same calculation for the denominator of Eq.\,\eqref{eq:xipmblub1}, we find
  \begin{align}
  \xi^{ij,\rm{obs}}_\pm(\theta) = & \left[ 1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left(\la n^in^j\ra + \la n^iw^j\ra \right.\right. \nonumber\\
  &\left.\left. + \la n^j w^i\ra + \la w^iw^j\ra\right)\right]\, \left[1+E(\theta)\la n^i n^j\ra \right]\inv\xi^{ij,\rm{uni}}_\pm (\theta) \, .
@@ -227,9 +227,9 @@ It is interesting to note that $\xi^{ij}_\pm = \xi_\pm^{ij,\rm{obs}}$ holds wher
 \caption{Weighted number of galaxies $N$ and average redshift $\la z\ra$ in the KiDS+VIKING-450 survey \citep[KV450,][]{Wright:2018} in pointings of different depth for each of the five tomographic bins used in H18. Each colour corresponds to one redshift bin of H18. A single point represents one quantile of the respective redshift bin, where the fainter points denote pointings of shallower depth.}
 \label{fig:nz_of_meanz}
 \end{figure}
-The previously derived analytic model describes how varying depth between pointings modifies the correlation function due to the correlation between number density and average redshift of source galaxies. While this model serves as an intuitive first approximation, it completely ignores any effects from the large scale structure (LSS) between the closest and the most distant galaxy. Therefore, we do not expect this model to yield accurate, quantitative results for cosmic shear surveys.
+The previously derived analytic model describes how varying depth between pointings modifies the correlation function due to the correlation between number density and the average redshift of source galaxies. While this model serves as an intuitive first approximation, it completely ignores any effects from the large scale structure (LSS) between the closest and the most distant galaxy. Therefore, we do not expect this model to yield accurate, quantitative results for cosmic shear surveys.
 
-Below we derive a more sophisticated model that includes the effects of the LSS. While it is computationally more expensive, it yields accurate results for cosmic shear surveys, which are sensitive to the exact redshift distributions of sources as well as the underlying cosmology.
+Below we derive a more sophisticated model that includes the effects of the LSS. While it is computationally more expensive, it improves the accuracy of the model for cosmic shear surveys, which are sensitive to the exact redshift distributions of sources as well as the underlying cosmology.
 
 An inspection of KiDS-data showed that the redshift distribution of sources is highly correlated with the limiting magnitude in the $r$-band. We thus chose to separate the survey into 10 quantiles, sorted by $r$-band depth, i.e. if a pointing had a shallower depth than 90\% of the other pointings, it would belong to the first quantile, and so on. For each quantile $m$ and each tomographic redshift bin $i$ we can extract a weighted number of galaxies $N^i_m$ and a source redshift distribution $p^i_m(z)$ following the direct spectroscopic calibration method of H18. In Fig.~\ref{fig:nz_of_meanz} the average redshift and weighted number of galaxies are plotted for each quantile of each redshift bin, whereas a selection of source redshift distributions is depicted in Fig.~\ref{fig:nofz_quantiles}. A table of the limiting magnitudes for each quantile can be found in Tab.~\ref{tab:maglim}.
 %
@@ -296,7 +296,7 @@ Defining $\xi^{ij}_\pm$ as the correlation functions between the average comovin
 & \qquad\times \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi'' \, \frac{\sum_n N_n^j \mathcal{L}^j_n(\chi'')}{N^j}  \, \frac{f_K(\chi''-\chi)}{f_K(\chi'')} \nonumber\\
 & \quad =  \, N^iN^j\xi^{ij}_\pm(\theta)\, .
 \end{align}
-Consequently, we can apply this to \eqref{eq:correctionfunction1}, yielding
+Consequently, we can apply this to Eq.~\eqref{eq:correctionfunction1}, yielding
 \begin{align}
 \xi_{\pm}^{ij,\rm{obs}}(\theta) = & \frac{1}{C}\left\{ E(\theta)\left[\sum_{m=1}^{10} N_m^iN_m^j \xi_{\pm,mm}^{ij}(\theta)\right]\right.\nonumber\\
 & \left.\vphantom{\sum_{m=1}^10}+\frac{\big[1-E(\theta)\big]}{10}\xi_\pm^{ij}(\theta)N^iN^j\right\}\, .
@@ -328,7 +328,7 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
   \centering
   \includegraphics[width=0.9\linewidth]{images/xis_all1.pdf}
-  \caption{The ratio of modelled to observed correlation functions for a cross-correlation of all redshift bins. Plotted are the semi-analytic method (blue), the numerical simulations (red) as well as the analytic method (green) with the first and second method of estimating the weight function, as described in the beginning of Sec.~\ref{sec:results}. The dashed part of the red line represents the region in which the limited resolution affects the simulations by more than 10\%. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
+  \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
   \label{fig:all_xis}
   \end{figure*}
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
